force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Financial transactions and payment tracking</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Payment</label><nameField><label>Payment Number</label><type>AutoNumber</type><displayFormat>PAY-{00000}</displayFormat><startingNumber>1</startingNumber></nameField><pluralLabel>Payments</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility></CustomObject>