force-app/main/default/objects/Payment__c/fields/Amount__c.field-meta.xml
<CustomField><fullName>Amount__c</fullName><description>Payment amount</description><externalId>false</externalId><label>Amount</label><precision>18</precision><required>true</required><scale>2</scale><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Currency</type></CustomField>