force-app/main/default/objects/Payment__c/fields/Due_Date__c.field-meta.xml
<CustomField><fullName>Due_Date__c</fullName><description>Payment due date</description><externalId>false</externalId><label>Due Date</label><required>true</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Date</type></CustomField>