force-app/main/default/objects/Payment__c/fields/Lease__c.field-meta.xml
<CustomField><fullName>Lease__c</fullName><description>Associated lease agreement</description><externalId>false</externalId><label>Lease</label><referenceTo>Lease__c</referenceTo><relationshipLabel>Payments</relationshipLabel><relationshipName>Payments</relationshipName><required>false</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Lookup</type></CustomField>