force-app/main/default/objects/Payment__c/fields/Payment_Status__c.field-meta.xml
<CustomField><fullName>Payment_Status__c</fullName><description>Current status of the payment</description><externalId>false</externalId><label>Payment Status</label><required>false</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Pending</fullName><default>true</default><label>Pending</label></value><value><fullName>Paid</fullName><default>false</default><label>Paid</label></value><value><fullName>Overdue</fullName><default>false</default><label>Overdue</label></value><value><fullName>Partial</fullName><default>false</default><label>Partial</label></value><value><fullName>Refunded</fullName><default>false</default><label>Refunded</label></value></valueSetDefinition></valueSet></CustomField>