force-app/main/default/objects/Payment__c/fields/Payment_Type__c.field-meta.xml
<CustomField><fullName>Payment_Type__c</fullName><description>Type of payment transaction</description><externalId>false</externalId><label>Payment Type</label><required>true</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Rent</fullName><default>true</default><label>Rent</label></value><value><fullName>Security Deposit</fullName><default>false</default><label>Security Deposit</label></value><value><fullName>Late Fee</fullName><default>false</default><label>Late Fee</label></value><value><fullName>Utilities</fullName><default>false</default><label>Utilities</label></value><value><fullName>Parking</fullName><default>false</default><label>Parking</label></value><value><fullName>Pet Fee</fullName><default>false</default><label>Pet Fee</label></value><value><fullName>Other</fullName><default>false</default><label>Other</label></value></valueSetDefinition></valueSet></CustomField>