force-app/main/default/objects/Payment__c/fields/Tenant__c.field-meta.xml
<CustomField><fullName>Tenant__c</fullName><description>Tenant making the payment</description><externalId>false</externalId><label>Tenant</label><referenceTo>Tenant__c</referenceTo><relationshipLabel>Payments</relationshipLabel><relationshipName>Payments</relationshipName><required>true</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Lookup</type></CustomField>